doc / Install dev environment
Still some cleaning to do on the repo, but, the dev environnement is there as well as the base doc

--- a/backend/Dockerfile.local
+++ b/backend/Dockerfile.local
@@ -1,7 +1,5 @@
-FROM node:alpine 
+FROM node:slim 
 # ATTENTION SI DEP QUI ON DES SOUCIS SOUS ALPINE
-
-RUN mkdir -p /svr/app
 
 WORKDIR /svr/app
 
@@ -11,8 +9,4 @@ COPY package*.json ./
 
 RUN npm i --silent
 
-COPY . .
-
-EXPOSE $BACKEND_PORT
-
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:dev"]
