--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     volumes:
-      - ./reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
+      - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
     command: [nginx-debug, '-g', 'daemon off;']
     ports:
       - "0.0.0.0:80:80"
