doc, test : Adding documentation and tools to test backend

--- a/backend_manual/js_client/tsconfig.json
+++ b/backend_manual/js_client/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@back/*": [ "../back/src/*" ],
+      "@back/*": [ "../../backend/srgfhhc/*" ],
     }
   },
   "include": ["src"],
