--- a/nginx/reverse_proxy.conf
+++ b/nginx/reverse_proxy.conf
@@ -8,5 +8,9 @@ server {
 	}
 	location / {
 		proxy_pass http://frontend:5173;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+		proxy_set_header Host $host;
 	}
 }
