--- a/nginx/reverse_proxy.conf
+++ b/nginx/reverse_proxy.conf
@@ -6,6 +6,10 @@ server {
 		proxy_pass http://backend:3000;
 		rewrite /api/(.*) /$1 break;
 	}
+	location /api_mockup/ {
+		proxy_pass http://backend_mockup:3000;
+		rewrite /api_mockup/(.*) /$1 break;
+	}
 	location / {
 		proxy_pass http://frontend:5173;
 		proxy_http_version 1.1;
