--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
+      # for backend_mockup use, don't forget to uncomment !
+      # - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro 
     command: [nginx-debug, '-g', 'daemon off;']
     ports:
       - "0.0.0.0:8080:8080"
@@ -25,7 +27,6 @@ services:
     env_file: .env
 
   # Don't forget to uncomment the following conteneur if you want to have the mockup available :) 
-
   # backend_mockup:
   #   build:
   #     context: ./backend_mockup
