refactor : recomenting mockup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     volumes:
-      # - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
+      - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
       # for backend_mockup use, don't forget to uncomment !
-      - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro 
+      # - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro 
     command: [nginx-debug, '-g', 'daemon off;']
     ports:
       - "0.0.0.0:8080:8080"
@@ -27,16 +27,16 @@ services:
     env_file: .env
 
   #  # Don't forget to uncomment the following conteneur if you want to have the mockup available :) 
-  backend_mockup:
-    build:
-      context: ./backend_mockup
-      dockerfile: Dockerfile.local
-    volumes: 
-      - "./backend_mockup/src:/svr/app/src"
-      - "./backend_mockup/test:/svr/app/test"
-    restart: unless-stopped
-    depends_on:
-      - database
+  # backend_mockup:
+  #   build:
+  #     context: ./backend_mockup
+  #     dockerfile: Dockerfile.local
+  #   volumes: 
+  #     - "./backend_mockup/src:/svr/app/src"
+  #     - "./backend_mockup/test:/svr/app/test"
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - database
 
   backend:
     build:
