--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,6 @@ services:
       - VITE_CONTEXT=DEV
       # - VITE_CONTEXT=MOCKUP
     restart: unless-stopped
-    env_file: .env
 
   #  # Don't forget to uncomment the following conteneur if you want to have the mockup available :) 
   # backend_mockup:
@@ -46,7 +45,7 @@ services:
       - "./backend/src:/svr/app/src"
       - "./backend/test:/svr/app/test"
     restart: unless-stopped
-    env_file: .env
+    env_file: ./backend/.env
     depends_on:
       - database
 
