fix norme : changing example to ease copy paste

--- a/backend/.env_sample
+++ b/backend/.env_sample
@@ -6,4 +6,4 @@ CLIENT_ID=
 CLIENT_SECRET=
 CALLBACK_URL=
 # (cdai) I prefer call the folder UPLOADED_FILES_DESTINATION as in the tutorial https://wanago.io/2021/11/08/api-nestjs-uploading-files-to-server/, so please use the same folder (normaly you can name it as you wish)
-UPLOADED_FILES_DESTINATION: './uploadedFiles'
+UPLOADED_FILES_DESTINATION='./uploadedFiles'
