--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,3 +1,4 @@
+#production
 version: '3.9'
 services:
   nginx:
@@ -5,8 +6,6 @@ services:
     restart: unless-stopped
     volumes:
       - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
-      # for backend_mockup use, don't forget to uncomment !
-      # - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro 
     command: [nginx-debug, '-g', 'daemon off;']
     ports:
       - "0.0.0.0:8080:8080"
@@ -17,30 +16,17 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.local
+      dockerfile: Dockerfile.production
     volumes: 
       - "./frontend/src:/usr/src/app/src"
     environment:
-      - VITE_CONTEXT=DEV
-      # - VITE_CONTEXT=MOCKUP
+      - VITE_CONTEXT=PRODUCTION
     restart: unless-stopped
-
-  #  # Don't forget to uncomment the following conteneur if you want to have the mockup available :) 
-  # backend_mockup:
-  #   build:
-  #     context: ./backend_mockup
-  #     dockerfile: Dockerfile.local
-  #   volumes: 
-  #     - "./backend_mockup/src:/svr/app/src"
-  #     - "./backend_mockup/test:/svr/app/test"
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - database
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.local
+      dockerfile: Dockerfile.production
     volumes: 
       - "./backend/src:/svr/app/src"
       - "./backend/test:/svr/app/test"
@@ -71,7 +57,6 @@ services:
       - db:/bitnami/postgresql
     ports: 
       - 5431:8080
-
     depends_on:
       - database
     
