fix, prod : env variable vite not building in front

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -17,19 +17,14 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.production
-    volumes: 
-      - "./frontend/src:/usr/src/app/src"
     environment:
-      - VITE_CONTEXT=PRODUCTION
+      - "'VITE_CONTEXT'='PRODUCTION'"
     restart: unless-stopped
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile.production
-    volumes: 
-      - "./backend/src:/svr/app/src"
-      - "./backend/test:/svr/app/test"
     restart: unless-stopped
     env_file: ./backend/.env
     depends_on:
