--- a/backend/Dockerfile.production
+++ b/backend/Dockerfile.production
@@ -1,15 +1,13 @@
 FROM node:alpine
 
-ARG NODE_ENV=staging
-
 WORKDIR /app
+
+RUN npm i -g @nestjs/cli --silent
 
 COPY . .
 
 RUN npm i --silent
 
 RUN npm run build
-
-EXPOSE 3000
 
 CMD ["node", "dist/main"]
