--- a/frontend/Dockerfile.production
+++ b/frontend/Dockerfile.production
@@ -1,20 +1,11 @@
-FROM node:slim as build
+FROM node:slim
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY . .
 
 RUN npm i --silent
 
-COPY . .
-
 RUN npm run build
-
-FROM nginx:alpine
-
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/build /usr/share/nginx/html
-
-EXPOSE 80
 
 CMD ["nginx", "-g", "deamon off;"]
