--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -18,7 +18,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.production
     environment:
-      - "'VITE_CONTEXT'='PRODUCTION'"
+      - VITE_CONTEXT=PRODUCTION
     restart: unless-stopped
 
   backend:
