--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,9 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "multer": "^1.4.5-lts.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "multer": "^1.4.5-lts.1",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -48,7 +48,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.2",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
