feat : adding shared routes consts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       dockerfile: Dockerfile.local
     volumes: 
       - "./frontend/src:/usr/src/app/src"
+      - "./backend/shared:/usr/src/app/shared"
     environment:
       - VITE_CONTEXT=DEV
       # - VITE_CONTEXT=MOCKUP
@@ -44,6 +45,7 @@ services:
     volumes: 
       - "./backend/src:/svr/app/src"
       - "./backend/test:/svr/app/test"
+      - "./backend/shared:/svr/app/shared"
     restart: unless-stopped
     env_file: ./backend/.env
     depends_on:
