--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "multer": "^1.4.5-lts.1",
+    "otplib": "^12.0.1",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
