--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "passport-local": "^1.0.0",
     "password-validator": "^5.3.0",
     "pg": "^8.8.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
