--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -38,6 +37,7 @@
     "class-validator": "^0.13.2",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "joi": "^17.6.1",
     "multer": "^1.4.5-lts.1",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
