--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "react-router-dom": "^6.4.0"
+  "scripts": {
+    "dev": "docker-compose up",
+    "full_build": "npm run prebuild && npm run build",
+    "build": "bash ./build_prod.sh",
+    "prebuild": "bash ./pre_build_prod.sh"
   }
 }
