--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "docker-compose up",
+    "prod": "docker-compose up --build",
     "purge": "docker system prune -fa && docker volume prune",
     "full_build": "npm run prebuild && npm run build",
     "build": "bash ./build_prod.sh",
