--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "purge": "docker system prune -fa && docker volume prune",
     "full_build": "npm run prebuild && npm run build",
     "build": "bash ./build_prod.sh",
-    "pre_build": "bash ./pre_build_prod.sh"
+    "pre_build": "bash ./pre_build_prod.sh",
+    "clear_build":"rm -rf ./dist_project"
   }
 }
