--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-loading-icons": "^1.1.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.4.0",
+    "react-switch": "^7.0.0",
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
