--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "password-validator": "^5.3.0",
     "pg": "^8.8.0",
     "qrcode": "^1.5.1",
+    "react-colorful": "^5.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
