fix, clean :most import error, and test components, deleted

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vite/client"],
     "moduleResolution": "node",
     "target": "ESNext",
     "useDefineForClassFields": true,
