--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "tsc && vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
