--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,16 +18,16 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "src/*": ["./src/*"],
-      "components/*": ["./src/components/*"],
-      "api/*": ["./src/api/*"],
-      "shared/*": ["./shared/*"],
-      "enumerations/*": ["./shared/enumerations/*"],
-      "httpsRoutes/*": ["./shared/httpsRoutes/*"],
-      "interfaces/*": ["./shared/interfaces/*"],
-      "other/*": ["./shared/other/*"],
-      "types/*": ["./shared/types/*"],
-      "websocketRoutes/*": ["./shared/websocketRoutes/*"]
+      "/src/*": ["./src/*"],
+      "/components/*": ["./src/components/*"],
+      "/api/*": ["./src/api/*"],
+      "/shared/*": ["./shared/*"],
+      "/enumerations/*": ["./shared/enumerations/*"],
+      "/httpsRoutes/*": ["./shared/httpsRoutes/*"],
+      "/interfaces/*": ["./shared/interfaces/*"],
+      "/other/*": ["./shared/other/*"],
+      "/types/*": ["./shared/types/*"],
+      "/websocketRoutes/*": ["./shared/websocketRoutes/*"]
     }
   },
   "include": ["src", "shared"],
