--- a/frontend/Dockerfile.production
+++ b/frontend/Dockerfile.production
@@ -1,15 +1,25 @@
-FROM nginx:alpine
+FROM node:slim
 
-RUN apk add nodejs npm
-
-WORKDIR /var/www/frontend
+WORKDIR /usr/src/app
 
 COPY . .
 
-RUN npm install -g npm@latest
+RUN npm i --silent
 
-RUN npm ci --silent
+CMD ["npm", "run", "dev"]
 
-RUN npm run build
+# FROM nginx:alpine
 
-CMD ["nginx", "-g", "daemon off;"]
+# RUN apk add nodejs npm
+
+# WORKDIR /var/www/frontend
+
+# COPY . .
+
+# RUN npm install -g npm@latest
+
+# RUN npm ci --silent
+
+# RUN npm run build
+
+# CMD ["nginx", "-g", "daemon off;"]
