--- a/nginx/reverse_proxy_prod.conf
+++ b/nginx/reverse_proxy_prod.conf
@@ -1,31 +1,28 @@
-
 server {
-	listen 8080 default_server;
+	client_max_body_size 1M;
 
+	listen 8080 default_server;
+	
+ 	location /socket.io/ {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+
+      proxy_pass http://backend:3000;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+    }
 	location /api/ {
 		proxy_pass http://backend:3000;
 		rewrite /api/(.*) /$1 break;
 	}
 	location / {
-		root /var/www/frontend;
+		proxy_pass http://frontend:5173;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+		proxy_set_header Host $host;
+		proxy_set_header X_Forwarded-For $proxy_add_x_forwarded_for;
 	}
 }
-
-# server {
-# 	listen 8080 default_server;
-
-# 	location /api/ {
-# 		proxy_pass http://backend:3000;
-# 		rewrite /api/(.*) /$1 break;
-# 	}
-# 	location / {
-# 		root /var/www/frontend;
-# 		index index.html;
-# 		try_files $uri $uri/ /index.html;
-# 	}
-
-# 	# error_page 500 502 503 504 /50x.html;
-# 	# location = /50x.html {
-# 	# 	root /usr/share/nginx/html;
-# 	# }
-# }
