--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,17 +1,28 @@
 #production
 version: '3.9'
 services:
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    volumes:
+      - ./nginx/reverse_proxy_prod.conf:/etc/nginx/conf.d/default.conf:ro
+    command: [nginx-debug, '-g', 'daemon off;']
+    ports:
+      - "0.0.0.0:8080:8080"
+    depends_on:
+      - frontend
+      - backend
+
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile.production
     restart: unless-stopped
-    volumes:
-      - ./nginx/reverse_proxy_prod.conf:/etc/nginx/conf.d/default.conf:ro
     environment:
       - VITE_CONTEXT=PRODUCTION
-    ports:
-      - "0.0.0.0:8080:8080"
+      - VITE_PONG_URL=${PONG_URL}
+      - VITE_PONG_URL_BACK=${PONG_URL_BACK}
+      - VITE_PONG_URL_BACK_MOCKUP=${PONG_URL_BACK_MOCKUP}
     depends_on:
       - backend
 
