--- a/nginx/reverse_proxy_prod.conf
+++ b/nginx/reverse_proxy_prod.conf
@@ -17,7 +17,9 @@ server {
 		proxy_pass http://backend:3000;
 		rewrite /api/(.*) /$1 break;
 	}
+	root /var/www/frontend;
 	location / {
+		try_files $uri /index.html
 		proxy_pass http://frontend:5173;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
