--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "prod": "docker-compose up --build",
     "purge": "docker system prune -fa && docker volume prune",
     "full_build": "npm run prebuild && npm run build",
-    "build": "bash ./build_prod.sh && cd dist_project && npm run prod #CI CD herokuapp;",
+    "build": "bash ./build_prod.sh",
     "only_build": "bash ./build_prod.sh",
     "pre_build": "bash ./pre_build_prod.sh",
     "clear_build": "rm -rf ./dist_project"
