--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 #development
-version: '3.9'
+version: "3.9"
 services:
   nginx:
     image: nginx:alpine
     restart: unless-stopped
     volumes:
-      - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro 
+      - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
       # for backend_mockup use, don't forget to uncomment !
-      # - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro 
-    command: [nginx-debug, '-g', 'daemon off;']
+      # - ./nginx/reverse_proxy_with_backend_mockup.conf:/etc/nginx/conf.d/default.conf:ro
+    command: [nginx-debug, "-g", "daemon off;"]
     ports:
       - "0.0.0.0:8080:8080"
     depends_on:
@@ -19,9 +19,9 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.local
-    volumes: 
-      - ./frontend/src:/usr/src/app/src:ro 
-      - ./backend/shared:/usr/src/app/shared:ro 
+    volumes:
+      - ./frontend/src:/usr/src/app/src:ro
+      - ./backend/shared:/usr/src/app/shared:ro
     environment:
       - VITE_CONTEXT="DEV"
       # - VITE_CONTEXT="MOCKUP"
@@ -30,12 +30,12 @@ services:
       - VITE_PONG_URL_BACK_MOCKUP=${PONG_URL_BACK_MOCKUP}
     restart: unless-stopped
 
-  #  # Don't forget to uncomment the following conteneur if you want to have the mockup available :) 
+  #  # Don't forget to uncomment the following conteneur if you want to have the mockup available :)
   # backend_mockup:
   #   build:
   #     context: ./backend_mockup
   #     dockerfile: Dockerfile.local
-  #   volumes: 
+  #   volumes:
   #     - "./backend_mockup/src:/svr/app/src"
   #     - "./backend_mockup/test:/svr/app/test"
   #   restart: unless-stopped
@@ -46,7 +46,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.local
-    volumes: 
+    volumes:
       - ./backend/src:/svr/app/src:ro
       - ./backend/test:/svr/app/test:ro
       - ./backend/shared:/svr/app/shared:ro
@@ -66,20 +66,20 @@ services:
       - POSTGRESQL_MASTER_PORT=5432
     volumes:
       - db:/bitnami/postgresql
-    
+
   admin:
-    image: bitnami/phppgadmin
+    image: bitnami/phppgadmin-archived
     restart: unless-stopped
     environment:
       - DATABASE_HOST=database
       - DATABASE_PORT_NUMBER=5432
     volumes:
       - db:/bitnami/postgresql
-    ports: 
+    ports:
       - 5431:8080
 
     depends_on:
       - database
-    
+
 volumes:
   db:
